--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="s8.projetsmartwatch">
+    package="s8.projetsmartwatch"
+    >
 
     <uses-feature android:name="android.hardware.type.watch" />
+
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
@@ -21,47 +23,48 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.DeviceDefault.Light">
+            android:theme="@android:style/Theme.DeviceDefault.Light"
+            android:noHistory="true"
+            android:launchMode="singleTop"
+            >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-            />
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".tapping_gesture.activity.TappingGestureActivityAlarme"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.DeviceDefault.Light">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-                    />
+            android:theme="@android:style/Theme.DeviceDefault.Light"
+            android:noHistory="true"
+            android:launchMode="singleTop">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".tapping_gesture.activity.TappingGestureActivityAreUOK"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.DeviceDefault.Light">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-                    />
+            android:theme="@android:style/Theme.DeviceDefault.Light"
+            android:noHistory="true"
+            android:launchMode="singleTop">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".tapping_gesture.activity.TappingGestureActivityP2ok"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.DeviceDefault.Light">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-                    />
+            android:theme="@android:style/Theme.DeviceDefault.Light"
+            android:noHistory="true"
+            android:launchMode="singleTop">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
 </manifest>
+
+<!--<intent-filter>
+                <action android:name="android.intent.action.MAIN"
+                    />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
